--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Ignore bundler config.
+/.bundle
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
+# Ignore all logfiles and tempfiles.
+/log/*.log
+/tmp
+
+# Ignore application configuration
+/config/application.yml
+
+
 *.gem
 *.rbc
 /.config
@@ -7,7 +22,6 @@
 /spec/reports/
 /test/tmp/
 /test/version_tmp/
-/tmp/
 
 ## Specific to RubyMotion:
 .dat*
